# summarizer-py

./: .gitignore  docker-compose.yaml
examples/: 01-sentenses.py  02-sent-and-rephrase.py  03-reduce-repeats.py  04-more-reduce-repeats.py  05-less-reduce-repeats.py  10-chatbot-short-context.py  11-chatbot-short-long-context.py  12-summarizer-transformers.py  13-chatbot-long-context.py  storages.py
ml-worker/: pyproject.toml
ml-worker/src/: client.py  summarizer.py
summarizer/: pyproject.toml
